fixed logo spacing in email templates. Updated email

--- a/webapp/sass/base/_structure.scss
+++ b/webapp/sass/base/_structure.scss
@@ -61,7 +61,7 @@ img {
 }
 
 .centerMeImage {
-  margin: 135px auto 90px;
+  margin: 55px auto 50px;
   width: 160px;
   display: block;
 }
